--- a/code-zero-pokedex/package.json
+++ b/code-zero-pokedex/package.json
@@ -23,9 +23,12 @@
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.6.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
