--- a/code-zero-pokedex/package.json
+++ b/code-zero-pokedex/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@zxing/browser": "^0.1.5",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.14",
